# Apply.me

./: CHANGELOG.md  README.md
backend/: Dockerfile  docker-compose.yaml  pom.xml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  users.py
backend/app/core/: exceptions.py
backend/app/core/config/: __init__.py  db.py
backend/app/core/middleware/: logging_middleware.py
backend/app/models/: application_model.py  user_model.py
backend/app/schemas/: application_schema.py  auth_schemas.py  error_schema.py  user_schemas.py
backend/app/services/: application_service.py  security_service.py  user_service.py
backend/app/test/: conftest.py
backend/app/test/models/: test_application_model.py  test_user_model.py
backend/app/test/schemas/: test_application_schema.py  test_auth_schema.py  test_user_schema.py
backend/app/test/services/: test_application_service.py  test_user_service.py
backend/src/main/java/com/applyme/backend/: BackendApplication.java
backend/src/test/java/com/applyme/backend/: BackendApplicationTests.java
frontend/: jest.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
services/llm_service/: main.py  pyproject.toml  pytest.ini
services/llm_service/src/api/v1/: chat.py
services/llm_service/src/core/: config.py  llm_client.py
services/llm_service/src/schemas/: question_schema.py  response_schema.py
services/llm_service/src/services/: chat_history_service.py  llm_service.py
services/llm_service/tests/: conftest.py
services/llm_service/tests/schemas/: test_question_schema.py  test_response_schema.py
(+15 files in other folders)
