[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "beanie==1.28.0",
    "fastapi[standard]>=0.136.3",
    "jwt>=1.4.0",
    "motor==3.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
]
