[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "beanie==1.28.0",
    "certifi>=2026.5.20",
    "coverage>=7.14.3",
    "fastapi[standard]>=0.136.3",
    "jwt>=1.4.0",
    "mongomock-motor>=0.0.36",
    "motor==3.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest-asyncio>=1.4.0",
    "uvicorn>=0.49.0",
]
