[project]
name = "lllm-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-ollama>=1.1.0",
    "pinecone>=9.1.0",
    "pytest>=9.1.1",
    "tavily>=1.1.0",
]
